--- a/paquimetro/pom.xml
+++ b/paquimetro/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.github.rafaelfernandes</groupId>
-	<artifactId>paquimetro</artifactId>
+	<artifactId>parquimetro</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Paquimetro</name>
+	<name>Parquimetro</name>
 	<description>Sistema de paquimetro</description>
 	<properties>
 		<java.version>17</java.version>
@@ -32,6 +32,15 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>net.datafaker</groupId>
+			<artifactId>datafaker</artifactId>
+			<version>2.0.2</version>
+			<scope>test</scope>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
