--- a/paquimetro/pom.xml
+++ b/paquimetro/pom.xml
@@ -45,6 +45,12 @@
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-testcontainers</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 
 	</dependencies>
 
