Colocando Documento e Email como únicos

--- a/paquimetro/src/main/resources/application.properties
+++ b/paquimetro/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.data.mongodb.uri=mongodb://parquimetro:parquimetro@localhost:27017/admin
 spring.data.mongodb.database=parquimetro
+spring.data.mongodb.auto-index-creation=true
