Adicionado paginacao e getAll

--- a/paquimetro/src/main/resources/application.properties
+++ b/paquimetro/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.data.mongodb.uri=mongodb://parquimetro:parquimetro@localhost:27017/admin
 spring.data.mongodb.database=parquimetro
 spring.data.mongodb.auto-index-creation=true
+spring.data.web.pageable.default-page-size=50
+spring.data.web.pageable.max-page-size=1000
