--- a/paquimetro/pom.xml
+++ b/paquimetro/pom.xml
@@ -68,6 +68,11 @@
 			<version>8.0.0.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.4</version>
+		</dependency>
 
 
 	</dependencies>
