Adicionando finalizar estacionamento, com multa

--- a/paquimetro/src/main/resources/application.properties
+++ b/paquimetro/src/main/resources/application.properties
@@ -3,3 +3,11 @@ spring.data.mongodb.database=parquimetro
 spring.data.mongodb.auto-index-creation=true
 spring.data.web.pageable.default-page-size=50
 spring.data.web.pageable.max-page-size=1000
+
+
+estacionamento.valor.hora.primeira=10
+estacionamento.valor.hora.restante=5
+
+estacionamento.valor.fixo=7
+
+estacionamento.valor.multa=10
