--- a/paquimetro/pom.xml
+++ b/paquimetro/pom.xml
@@ -74,6 +74,13 @@
 			<version>4.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.14.0</version>
+		</dependency>
+
+
 
 	</dependencies>
 
