Refatoração -> Finalizar estacionamento

--- a/paquimetro/src/main/resources/application.properties
+++ b/paquimetro/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.data.web.pageable.default-page-size=50
 spring.data.web.pageable.max-page-size=1000
 
 
-estacionamento.valor.hora.primeira=10.0
-estacionamento.valor.hora.restante=5.0
+parking.hour.first=10.0
+parking.hour.rest=5.0
 
-estacionamento.valor.fixo=7.0
+parking.fix=7.0
 
-estacionamento.valor.multa=10.0
+parking.penalty=10.0
