Envio de recibo por email

--- a/paquimetro/src/main/resources/application.properties
+++ b/paquimetro/src/main/resources/application.properties
@@ -1,13 +1,28 @@
+# Mongo db
 spring.data.mongodb.uri=mongodb://parquimetro:parquimetro@localhost:27017/admin
 spring.data.mongodb.database=parquimetro
 spring.data.mongodb.auto-index-creation=true
+
+# Spring size pages
 spring.data.web.pageable.default-page-size=50
 spring.data.web.pageable.max-page-size=1000
 
+# Thymeleaf
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.cache=false
 
+# Email Send
+spring.mail.host=localhost
+spring.mail.port=8025
+spring.mail.username=setusername
+spring.mail.password=setpassword
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Calc for parking
 parking.hour.first=10.0
 parking.hour.rest=5.0
-
 parking.fix=7.0
-
 parking.penalty=10.0
