--- a/paquimetro/src/main/resources/application.properties
+++ b/paquimetro/src/main/resources/application.properties
@@ -26,3 +26,6 @@ parking.hour.first=10.0
 parking.hour.rest=5.0
 parking.fix=7.0
 parking.penalty=10.0
+
+springdoc.swagger-ui.operations-sorter=alpha
+
